kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
  annotations:
    cert-manager.io/cluster-issuer: production
    # Add additional annotations as needed for your specific ingress controller
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: external-nginx  # Use the correct Ingress class
  rules:
  - host: tic-tac-toe.neamulkabiremon.com  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tic-tac-toe
            port:
              number: 80
  # Uncomment and configure if you want TLS
  tls:
    - hosts:
      - tic-tac-toe.neamulkabiremon.com
      secretName: tic-tac-toe-tls
